# conflagrate

./: README.md  pyproject.toml  setup.cfg
conflagrate/: __init__.py  asyncutils.py  controlflow.py  dependencies.py  engine.py  graph.py  parser.py  registration.py
conflagrate/parse/: __init__.py  graphviz.py  native.py
examples/branching/: branching.gv  branching.py
examples/dependencies/: config.json  example_dependencies.py  message_processor.gv  message_processor.py  message_sender.gv  message_sender.py  messages_to_send.json
examples/helloworld/: helloworld.gv  helloworld.py
examples/loop/: loop.gv  loop.py
examples/native_python/: native_python.py
examples/parallel/: parallel.gv  parallel.py
examples/subgraph/: subgraph.py
test/: asyncutils_test.py  dependencies_test.py  engine_test.py  engine_tests.py  graph_tests.py
