[metadata]
name = conflagrate
version = 0.0.1
description = A framework for writing applications with control flow graphs
long_description = file: README.md
author = Jeffrey Bouas
author_email = ignirtoq+conflagrate@gmail.com
url = https://github.com/ignirtoq/conflagrate

[options]
packages = conflagrate
install_requires =
    pydot ~= 1.4
